Brandan section is done

--- a/platform.html
+++ b/platform.html
@@ -369,8 +369,43 @@
         </div>
     </div>
 </section>
-
 <!--./TESTIMONIALS SECTION-->
+
+<!--REILLY SECTION DARK-->
+<section class="reilly_section_dark">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-4 reilly_image-container">
+
+                <div class="reilly_image-round-container">
+                    <div class="reilly_image"></div>
+                </div>
+
+            </div>
+
+            <div class="col-md-8">
+                <div class="reilly_about">
+                    <p>
+                        “I am a Double Olympian and PE teacher but to my 3 children I am Dad.
+                        Through conversations I have had with elite sportsmen there is an agreement.
+                        The most important thing you can do as a parent to help your child succeed is to simply
+                        show support and encouragement. <br>
+                        <br>
+                        As a parent Squad In Touch allows me to show this support for my children and as
+                        a teacher Squad In Touch allows me to select teams quicker and manage my students performances
+                        more efficiently allowing me to spend more time teaching and coaching.” <br>
+                        <br>
+                        <strong>Brendan Reilly</strong> <br>
+                        Squad In Touch Co-Founder and Ambassador
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<!--./REILLY SECTION DARK-->
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
