--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                     class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports Stars Inspiration Day</a></li>
-                                <li><a href="#">Sports development platform</a></li>
+                                <li><a href="platform.html">Sports development platform</a></li>
                             </ul>
                         </div>
                     </div>
@@ -770,9 +770,13 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3 testimonial-picture-padding">
-                                    <a href="#videoyoutube" data-toggle="modal">
-                                        <div class="testimonial1-background"></div>
-                                    </a>
+                                    <div class="testimonial1-background">
+                                    <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
+                                        <button type="button" class="play-button"
+                                                aria-hidden="true">
+                                        </button>
+
+                                    </a></div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="testimonial2-background"></div>
@@ -819,13 +823,7 @@
     </div>
 </section>
 <!---->
-<section id="testimonials" class="testimonial_section visible-xs">
-    <!--&lt;!&ndash; Карусель &ndash;&gt;-->
-    <!--<div id="carousel-testimpnials" class="carousel slide" data-interval="0" data-ride="carousel">-->
-    <!--&lt;!&ndash; Слайды карусели &ndash;&gt;-->
-    <!--<div class="carousel-inner">-->
-    <!--&lt;!&ndash; Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда &ndash;&gt;-->
-    <!--<div class="active item">-->
+<section id="testimonials1" class="testimonial_section visible-xs">
     <div class="container">
         <div class="row">
             <div class="col-md-12 testimonial-bottom">
@@ -841,66 +839,27 @@
                 </div>
             </div>
             <!-- Карусель -->
-            <div id="carousel-testimonials" class="carousel slide" data-interval="0" data-ride="carousel">
+            <div id="carousel-testimonials1" class="carousel slide" data-interval="0" data-ride="carousel">
                 <!-- Слайды карусели -->
                 <div class="carousel-inner">
                     <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
                     <div class="active item">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-2 testimonial-school-section">
+
+                                <div class="col-md-2 testimonial2-school-section">
                                     <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
                                 </div>
-                                <div class="col-md-4 testimonial-info">
-                                    <div class="testimonials-title">
-                                        <h4>Sir John Barrow Primary School</h4></div>
-                                    <div>He was very flexible with how we could make it more challenging for KS2 and his
-                                        sessions linked
-                                        perfectly to the PE curriculum and Multi-Skills.
-                                        <br/>
-                                        <br>— James Maher, Teacher
-                                    </div>
-                                </div>
-                                <div class="col-md-3 testimonial-picture-padding">
-                                    <iframe width="276" height="240" src="https://www.youtube.com/embed/AjAyz7-cSKc"
-                                            frameborder="0" gesture="media" allow="encrypted-media"
-                                            allowfullscreen></iframe>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="testimonial2-background"></div>
-                                </div>
-                            </div>
-                        </div>
+                                <div class="col-md-2 testimonial-background">
+                                    <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
+                                        <button type="button" class="play-button"
+                                                aria-hidden="true">
+                                        </button>
+
+                                    </a></div>
+
+
 
                     </div>
-                    <div class="container">
-                        <div class="row school2-margin">
-                            <div class="col-md-2 testimonial-school-section">
-                                <img class="testimonial-school" src="src/image/school2.jpg" alt="reily"/>
-                            </div>
-                            <div class="col-md-4 testimonial-info">
-                                <div class="testimonials-title">
-                                    <h4>Alton Placholder School</h4></div>
-                                <div>"Brendan spoke with enthusiasm and conviction about his own personal journey to
-                                    being
-                                    the best he
-                                    could be, and both the children and staff were captivated. He kept everyone engaged
-                                    through his
-                                    honesty, the details in his stories, and his humour… <span><a
-                                            href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>
-                                    <br/>
-                                    <br>— Robert Knight, School Director
-                                </div>
-                            </div>
-                            <div class="col-md-3 testimonial-picture-padding">
-                                <div class="testimonial3-background"></div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="testimonial4-background"></div>
-                            </div>
 
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -962,18 +921,18 @@
 
                     <div class="contact_form">
                         <!--EMAIL-->
-                        <label for="email">Email</label>
+                        <label for="e-mail">Email</label>
                         <div class="email_container">
-                            <input type="email" class="email-height ask-form-background contact_form-email" id="email"/>
-                            <button class="send_button">
+                            <input type="email" class="email-height ask-form-background contact_form-email" id="e-mail"/>
+                            <button id="send-email" class="send_button">
                                 Send
                             </button>
                         </div>
                         <!--./EMAIL-->
 
 
-                        <label class="message-margin" for="message">Your message</label>
-                        <textarea id="message" class="message-height ask-form-background contact_form-message"
+                        <label class="message-margin" for="messages">Your message</label>
+                        <textarea id="messages" class="message-height ask-form-background contact_form-message"
                                   rows="5"></textarea>
 
                     </div>
@@ -1021,10 +980,9 @@
 <!--./Contacts-->
 
 <!-- Модальное оно Host Event -->
-<div class="container">
-    <div class="row">
-        <div id="myModal" class="modal fade col-md-8 col-md-offset-2">
-            <div class="modal-center">
+
+        <div id="myModal" class="modal fade">
+            <div class="modal-center" data-dismiss="modal">
                 <div class="modal-dialog modal-width">
                     <div class="modal-content ">
                         <!-- Заголовок модального окна -->
@@ -1077,12 +1035,11 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+
 
 <!-- Мodal window Martyn -->
 <div id="martynmodal" class="modal fade">
-    <div class="modal-center">
+    <div class="modal-center" data-dismiss="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <!-- Заголовок модального окна -->
@@ -1123,7 +1080,7 @@
 
 <!-- HTML-код модального окна -->
 <div id="melclarkemodal" class="modal fade">
-    <div class="modal-center">
+    <div class="modal-center" data-dismiss="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <!-- Заголовок модального окна -->
@@ -1161,7 +1118,7 @@
 
 <!-- HTML-код модального окна -->
 <div id="altonschoolmodal" class="modal fade">
-    <div class="modal-center">
+    <div class="modal-center" data-dismiss="modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <!-- Заголовок модального окна -->
@@ -1195,7 +1152,7 @@
 
 <!-- HTML-код модального окна -->
 <div id="videoyoutube" class="modal fade">
-    <div class="modal-center">
+    <div class="modal-center" data-dismiss="modal">
         <div class="modal-dialog">
             <div>
                 <button type="button" class="close close-video-popup" data-dismiss="modal"
