Partners section is done

--- a/platform.html
+++ b/platform.html
@@ -407,6 +407,19 @@
 </section>
 <!--./REILLY SECTION DARK-->
 
+<!--PARTNERS SECTION-->
+<section id="partners" class="partners_section">
+    <div class="container">
+        <div class="partners_container">
+            <h3>Partners</h3>
+            <img src="src/image/yst.svg" alt="YST"/>
+            <img src="src/image/isa-logo.png" alt="ISA"/>
+            <img src="src/image/peba.png" alt="Business Associate"/>
+        </div>
+    </div>
+</section>
+<!--./PARTNERS SECTION-->
+
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
 </html>
