Inspiration day section is done

--- a/platform.html
+++ b/platform.html
@@ -420,6 +420,48 @@
 </section>
 <!--./PARTNERS SECTION-->
 
+<!--INSPIRATION DAY SECTION-->
+<section class="inspiration_day_section">
+    <div class="slide_background">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6 col-md-offset-6 oid">
+                    <div class="oidcen">
+                        <h2> Sports Stars Inspiration Day</h2>
+                        <h5>Helping develop PE and Sport through <br>Inspiration,
+                            Aspiration and Engagement.</h5>
+                        <button class="button--primary" href="#myModal" data-toggle="modal">Host event
+                        </button>
+                    </div>
+                    <div class="container oiddown">
+
+                        <div>“Our Olympian was fantastic and really engaged the students on a level
+                            they could relate to. He made them laugh and also drew “them into the
+                            story of his journey to success via different“ obstacles including injury.
+                            We would love to have him back!”
+                        </div>
+
+                        <div class="bold_text">
+                            Jacqui Ferris
+                        </div>
+                        <div>
+                            Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+</section>
+<!--./INSPIRATION DAY SECTION-->
+
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
 </html>
