--- a/platform.html
+++ b/platform.html
@@ -462,6 +462,84 @@
 </section>
 <!--./INSPIRATION DAY SECTION-->
 
+<!--CONTACT SECTION-->
+<section class="ask_questions contact_section">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="contact_section-left">
+                    <h3>
+                        Feel free to ask questions via email, <br/>
+                        or call us
+                        <span class="ask-phone">01293 734004</span>
+                    </h3>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+
+                <div class="contact_section-right">
+
+                    <div class="contact_form">
+                        <!--EMAIL-->
+                        <label for="e-mail">Email</label>
+                        <div class="email_container">
+                            <input type="email" class="email-height ask-form-background contact_form-email" id="e-mail"/>
+                            <button id="send-email" class="send_button">
+                                Send
+                            </button>
+                        </div>
+                        <!--./EMAIL-->
+
+
+                        <label class="message-margin" for="messages">Your message</label>
+                        <textarea id="messages" class="message-height ask-form-background contact_form-message"
+                                  rows="5"></textarea>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+</section>
+<!--./CONTACT SECTION-->
+
+<!--FOOTER-->
+<footer id="contact" class="contacts">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 contacts-margin">
+                <div class="fontbold">Squad in Touch Ltd</div>
+                <div>Pacific House, 382
+                    Kenton Road Harrow
+                    Middlesex, HA3 8DP
+                </div>
+            </div>
+            <div class="col-md-2 contacts-margin">
+                <div class="fontbold">Contact information</div>
+                <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
+                    01293 734004
+                </div>
+                <div><a class="contact-decoration" href="https://www.facebook.com/SquadInTouch/"> Facebook</a> <span
+                        class="contact-divider-color">&nbsp; | &nbsp;</span>
+                    <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
+            </div>
+            <div class="col-md-4 col-md-offset-4">
+                <img src="src/image/logoccss.svg" alt="reily"/>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="copyright-margin">Copyright © 2017 Squad In Touch</div>
+    </div>
+
+</footer>
+<!--./FOOTER-->
+
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
 </html>
