--- a/platform.html
+++ b/platform.html
@@ -79,38 +79,88 @@
 
 
     <!--SLIDER-->
-    <div class="platform_slide">
+    <div id="myCarousel" class="carousel slide platform_slider" data-interval="false" data-ride="carousel">
+        <div class="carousel-inner">
 
-        <div class="slider_content">
+            <!--first slide-->
+            <div class="item active">
+                <div class="platform_slide">
 
-            <div class="slider_content-top">
-                <h3>
-                    Kids and youth sports development platform
-                    supported by the team of Olympians.
-                    Make sport fun again.
-                </h3>
+                    <div class="slider_content">
 
-                <a href="https://app.squadintouch.com">
-                    <button class="button--primary">Sign up / Sign in</button>
-                </a>
+                        <div class="slider_content-top">
+                            <h3>
+                                Kids and youth sports development platform
+                                supported by the team of Olympians.
+                                Make sport fun again.
+                            </h3>
+
+                            <a href="https://app.squadintouch.com">
+                                <button class="button--primary">Sign up / Sign in</button>
+                            </a>
+                        </div>
+
+                        <div class="slider_content-bottom hidden-xs">
+
+                            <p>
+                                "Squad in Touch provides everything we need to organise school teams and clubs easily.
+                                Anything that is not a feature can be sorted out effectively and the support we have
+                                been
+                                given setting this up has been great... <a href="#">Read more</a>
+                            </p>
+
+                            <p>
+                                <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!--./first slide-->
 
-            <div class="slider_content-bottom hidden-xs">
+            <!--second slide-->
+            <div class="item slide_background">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-6 oid">
+                            <div class="oidcen">
+                                <h2> Sports Stars Inspiration Day</h2>
+                                <h5>Helping develop PE and Sport through <br>Inspiration,
+                                    Aspiration and Engagement.</h5>
+                                <button class="button--primary" href="#myModal" data-toggle="modal">Host event
+                                </button>
+                            </div>
+                            <div class="container oiddown">
 
-                <p>
-                    "Squad in Touch provides everything we need to organise school teams and clubs easily.
-                    Anything that is not a feature can be sorted out effectively and the support we have been
-                    given setting this up has been great... <a href="#">Read more</a>
-                </p>
+                                <div>“Our Olympian was fantastic and really engaged the students on a level
+                                    they could relate to. He made them laugh and also drew “them into the
+                                    story of his journey to success via different“ obstacles including injury.
+                                    We would love to have him back!”
+                                </div>
 
-                <p>
-                    <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
-                </p>
-
+                                <div class="bold_text">
+                                    Jacqui Ferris
+                                </div>
+                                <div>
+                                    Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <!--./second slide-->
 
+            <div class="slide-button">
+                <div class="container slide-button-container">
+                    <div class="slide-control-height">
+                        <a class="carousel-control slide-control slider_button" href="#myCarousel" data-slide="next">
+                            <span class="glyphicon slide-content"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </div>
     <!--./SLIDER-->
 
