--- a/index.html
+++ b/index.html
@@ -845,10 +845,10 @@
                     <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
                     <div class="active item">
 
-                                <div class="col-md-2 testimonial2-school-section">
+                                <div class="testimonial2-school-section">
                                     <img class="testimonial-school" src="src/image/sirjohn.jpg" alt="reily"/>
                                 </div>
-                                <div class="col-md-2 testimonial-background">
+                                <div class="testimonial-background">
                                     <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
                                         <button type="button" class="play-button"
                                                 aria-hidden="true">
@@ -908,7 +908,7 @@
             <div class="col-md-6">
                 <div class="contact_section-left">
                     <h3>
-                        Feel free to ask questions via email, <br/>
+                        Feel free to ask questions via email,
                         or call us
                         <span class="ask-phone">01293 734004</span>
                     </h3>
@@ -966,7 +966,7 @@
                         class="contact-divider-color">&nbsp; | &nbsp;</span>
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-4 col-md-offset-4 copyright-position">
                 <img src="src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
