--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
             <div class="col-md-6">
                 <div class="contact_section-left">
                     <h3>
-                        Feel free to ask questions via email,
+                        Feel free to ask questions via email, <br class="hidden-xs">
                         or call us
                         <span class="ask-phone">01293 734004</span>
                     </h3>
