--- a/platform.html
+++ b/platform.html
@@ -529,7 +529,7 @@
             <div class="col-md-6">
                 <div class="contact_section-left">
                     <h3>
-                        Feel free to ask questions via email, <br/>
+                        Feel free to ask questions via email, <br class="hidden-xs">
                         or call us
                         <span class="ask-phone">01293 734004</span>
                     </h3>
@@ -588,7 +588,7 @@
                         class="contact-divider-color">&nbsp; | &nbsp;</span>
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-4 col-md-offset-4 copyright-position">
                 <img src="src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
