--- a/index.html
+++ b/index.html
@@ -78,19 +78,20 @@
                 <div class="carousel-inner">
 
                     <!--FIRST SLIDE-->
-                    <div class="active item slide_background">
+                    <div class="active item">
+                        <div class="slide_background">
                         <div class="container">
                             <div class="row">
 
                                 <div class="col-md-6 col-md-offset-6 oid">
                                     <div class="oidcen">
                                         <h2> Sports Stars Inspiration Day</h2>
-                                        <h5>Helping develop PE and Sport through <br>Inspiration,
+                                        <h5 class="hidden-xs">Helping develop PE and Sport through <br>Inspiration,
                                             Aspiration and Engagement.</h5>
-                                        <button class="button--primary" href="#myModal" data-toggle="modal">Host event
-                                        </button>
+                                        <a href="platform.html"><button class="button--primary">Visit product page
+                                        </button></a>
                                     </div>
-                                    <div class="container oiddown">
+                                    <div class="container oiddown hidden-xs">
 
                                         <div>“Our Olympian was fantastic and really engaged the students on a level
                                             they could relate to. He made them laugh and also drew “them into the
@@ -112,12 +113,29 @@
                             </div>
 
                         </div>
+                        </div>
+                        <div class="container oiddown visible-xs">
 
+                            <div>“Our Olympian was fantastic and really engaged the students on a level
+                                they could relate to. He made them laugh and also drew “them into the
+                                story of his journey to success via different“ obstacles including injury.
+                                We would love to have him back!”
+                            </div>
+
+                            <div class="bold_text">
+                                Jacqui Ferris
+                            </div>
+                            <div>
+                                Assistant Principal Behaviour/technology for learning at Dukeries Academy
+                            </div>
+
+                        </div>
 
                     </div>
 
                     <!--SECOND SLIDE-->
-                    <div class="item second_slide">
+                    <div class="item">
+                        <div class="second_slide hidden-xs">
                         <div class="container second_slide-left">
                             <div class="row">
 
@@ -126,7 +144,7 @@
                                         Sports development platform for kids
                                     </h2>
 
-                                    <p class="second_slide-text">
+                                    <p class="second_slide-text hidden-xs">
                                         For many of us, our very first experience of learning about the celestial bodies
                                         begins when we saw
                                         our first full moon in the sky. It is truly a magnificent view even to the naked
@@ -145,23 +163,53 @@
                             </div>
 
                         </div>
-
-                        <div class="grey_block">
+                        <div class="grey_block hidden-xs">
                             <div class="container">
                                 <a href="#">Visit product page to learn more →</a>
                             </div>
                         </div>
+                    </div>
+                        <!--->
+                        <div class="second_slide-background visible-xs">
+                            <div class="container second_slide-left">
+                                <div class="row">
+                                    <div class="col-md-6 col-md-offset-6 oid">
+                                        <div class="oidcen">
+                                            <h2 class="second_slide-title">
+                                                Sports development platform for kids
+                                            </h2>
+                                            <button class="button--primary second_slide-button" title="TRY 30 DAYS FREE">
+                                                TRY 30 DAYS FREE
+                                            </button>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="col-sm-7 col-md-8 hidden-xs second_slide-right">
+                                        <img src="src/image/slide2_devices.png"/>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    <!----->
+
 
                     </div>
 
 
                     <div class="slide-button">
                         <div class="container slide-button-container">
-                            <div class="slide-control-height">
+
                                 <a class="carousel-control slide-control" href="#myCarousel" data-slide="next">
                                     <span class="glyphicon slide-content"></span>
                                 </a>
-                            </div>
+
                         </div>
                     </div>
 
