--- a/platform.html
+++ b/platform.html
@@ -127,7 +127,7 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <button class="button--primary" href="#myModal" data-toggle="modal">Host event
+                                <button class="button--primary" href="#host_eventl" data-toggle="modal">Host event
                                 </button>
                             </div>
                             <div class="container oiddown">
@@ -171,12 +171,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="bottom_navigation">
-                        <li class="bottom_navigation-item"><a href="#how_it_works">See how it works</a></li>
-                        <li class="bottom_navigation-item"><a
-                                href="http://docs.squadintouch.com/security-and-data-protection/">Data protection &
-                            Security</a></li>
-                        <li class="bottom_navigation-item"><a class="smooth_scroll"
-                                                              href="#testimonials">Testimonials</a></li>
+                        <li class="bottom_navigation-item">
+                            <a href="#how_it_works">See how it works</a>
+                        </li>
+                        <li class="bottom_navigation-item">
+                            <a href="http://docs.squadintouch.com/security-and-data-protection/">Data protection &
+                                Security</a>
+                        </li>
+                        <li class="bottom_navigation-item">
+                            <a class="smooth_scroll" href="#testimonials">Testimonials</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -259,7 +263,9 @@
                     • Free app to share photos of events
                 </div>
 
-                <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
+                <a href="https://app.squadintouch.com/#register">
+                    <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
+                </a>
             </div>
             <!--./TABS-->
 
@@ -546,7 +552,7 @@
                         <div class="email_container">
                             <input type="email" class="email-height ask-form-background contact_form-email"
                                    id="e-mail"/>
-                            <button id="send-email" class="send_button">
+                            <button id="send-email" class="send_button" onclick="sendmail()">
                                 Send
                             </button>
                         </div>
@@ -599,6 +605,66 @@
 
 </footer>
 <!--./FOOTER-->
+
+
+<!--MODAL WINDOWS-->
+<!-- Модальное оно Host Event -->
+
+<div id="host_event" class="modal fade">
+    <div class="modal-center" data-dismiss="modal">
+        <div class="modal-dialog modal-width">
+            <div class="modal-content ">
+                <!-- Заголовок модального окна -->
+                <div class="modal-header sportsmen_modal-header">
+                    <button type="button" class="close close-popup" data-dismiss="modal"
+                            aria-hidden="true">
+                    </button>
+                    <h4 class="modal-title">Host Sport Stars Inspiration Day</h4>
+                </div>
+                <!-- Основное содержимое модального окна -->
+                <form role="form" id="contactForm">
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="form-group modal-hod">
+                                <label for="email" class="h4">Your email</label>
+                                <input type="email" class="form-control olympian_form-height" id="email"
+                                       placeholder="Enter email" required>
+                            </div>
+                            <div class="form-group modal-hod">
+                                <label for="name" class="h4">School name</label>
+                                <input type="text" class="form-control olympian_form-height" id="name"
+                                       placeholder="Enter school name" required>
+                            </div>
+                            <div class="form-group modal-hod">
+                                <div class="form-group">
+                                    <label for="message" class="h4 ">Additional notes
+                                        (optional)</label>
+                                    <textarea id="message" class="form-control olympian_form-height" rows="5"
+                                              placeholder="Enter your message"
+                                              required></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group modal-hod">
+                                <button type="submit" id="form-submit"
+                                        class="button--primary send-button">
+                                    Submit
+                                </button>
+                                <div id="msgSubmit" class="h3 text-center hidden">
+                                    Message Submitted!
+                                </div>
+                                .
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+                <!-- Футер модального окна -->
+
+            </div>
+        </div>
+    </div>
+</div>
+<!--./MODAL WINDOWS-->
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
