--- a/platform.html
+++ b/platform.html
@@ -127,8 +127,7 @@
                                 <h2> Sports Stars Inspiration Day</h2>
                                 <h5>Helping develop PE and Sport through <br>Inspiration,
                                     Aspiration and Engagement.</h5>
-                                <button class="button--primary" href="#host_eventl" data-toggle="modal">Host event
-                                </button>
+                                <button class="button--primary" href="#host_event" data-toggle="modal">Host event</button>
                             </div>
                             <div class="container oiddown">
 
@@ -153,11 +152,9 @@
 
             <div class="slide-button">
                 <div class="container slide-button-container">
-                    <div class="slide-control-height">
-                        <a class="carousel-control slide-control slider_button" href="#myCarousel" data-slide="next">
-                            <span class="glyphicon slide-content"></span>
-                        </a>
-                    </div>
+                    <a class="carousel-control slide-control slider_button" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon slide-content"></span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -496,7 +493,7 @@
                         <h2> Sports Stars Inspiration Day</h2>
                         <h5>Helping develop PE and Sport through <br>Inspiration,
                             Aspiration and Engagement.</h5>
-                        <button class="button--primary" href="#myModal" data-toggle="modal">Host event
+                        <button class="button--primary" href="#host_event" data-toggle="modal">Host event
                         </button>
                     </div>
                     <div class="container oiddown">
