--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                                         <h2> Sports Stars Inspiration Day</h2>
                                         <h5 class="hidden-xs">Helping develop PE and Sport through <br>Inspiration,
                                             Aspiration and Engagement.</h5>
-                                        <a href="platform.html"><button class="button--primary">Visit product page
-                                        </button></a>
+                                        <a href="#myModal" data-toggle="modal">
+                                            <button class="button--primary">Host event</button>
+                                        </a>
                                     </div>
                                     <div class="container oiddown hidden-xs">
 
