--- a/platform.html
+++ b/platform.html
@@ -208,11 +208,12 @@
                 </ul>
 
                 <div id="teachers" class="tab-content description_tabs-content current">
-                    <p>
+                    <strong>
                         Spend your time doing the sport. <br>
-                        Allow Squad In Touch to take care of the rest.
-                    </p>
-                    <strong>Squad In Touch helps PE teachers:</strong> <br>
+                        Allow Squad In Touch to take care of the rest. <br>
+                    </strong>
+                    <br>
+                    Squad In Touch helps PE teachers: <br>
                     • Organise fixtures calendar <br>
                     • Submit games results even from pitches <br>
                     • Keep track record of pupils performance and discipline up to date <br>
@@ -221,11 +222,12 @@
                 </div>
 
                 <div id="schools" class="tab-content description_tabs-content">
-                    <p>
+                    <strong>
                         A sustainable sports software solution created to help you <br>
-                        develop and manage your PE strategy and inspire the next generation
-                    </p>
-                    <strong>Squad In Touch helps schools:</strong> <br>
+                        develop and manage your PE strategy and inspire the next generation <br>
+                    </strong>
+                    <br>
+                    Squad In Touch helps schools: <br>
                     • Save money and staff’ time <br>
                     • Increase the number of young people taking part in competitions <br>
                     • Promote healthy lifestyle among pupils <br>
@@ -236,11 +238,12 @@
                 </div>
 
                 <div id="parents" class="tab-content description_tabs-content">
-                    <p>
+                    <strong>
                         Don’t JUST read results. <br>
-                        IMRPOVE results with our Olympians advice.
-                    </p>
-                    <strong>With Squad In Touch parents are provided with:</strong> <br>
+                        IMRPOVE results with our Olympians advice.<br>
+                    </strong>
+                    <br>
+                    With Squad In Touch parents are provided with: <br>
                     • 24 Hour access to fixtures calendar, tables and reports <br>
                     • One touch booking for after school clubs <br>
                     • Free app to help support their child and share photos of events <br>
@@ -249,11 +252,12 @@
                 </div>
 
                 <div id="students" class="tab-content description_tabs-content">
-                    <p>
+                    <strong>
                         Get socialised around your sport life. <br>
-                        Keep in touch with your squad.
-                    </p>
-                    <strong>With Squad In Touch students are provided with:</strong> <br>
+                        Keep in touch with your squad.<br>
+                    </strong>
+                    <br>
+                    With Squad In Touch students are provided with: <br>
                     • 24 Hour access to fixtures calendar, tables and reports <br>
                     • Your performance and progress tracking <br>
                     • Tools for communicating with school PE staff and other students <br>
@@ -268,8 +272,8 @@
 
             <div class="col-sm-5 col-md-5 description_image hidden-xs">
                 <!--TAB IMAGES-->
-                <img id="teachers_image" class="tab-image current" src="src/image/slide2_devices.png"/>
-                <img id="schools_image" class="tab-image" src="src/image/schools.svg"/>
+                <img id="teachers_image" class="tab-image current" src="src/image/teacher.png"/>
+                <img id="schools_image" class="tab-image" src="src/image/slide2_devices.png"/>
                 <img id="parents_image" class="tab-image" src="src/image/parents.jpg"/>
                 <img id="students_image" class="tab-image" src="src/image/students.jpg"/>
 
