Changed menu text

--- a/platform.html
+++ b/platform.html
@@ -27,7 +27,7 @@
                         </a>
                         <div class="menu_dropdown hidden-xs">
                             <a href="#" class="dropdown-toggle custom-droptoggle" data-toggle="dropdown"><b
-                                    class="caret caret_custom"></b>Sports Stars Inspiration Day</a>
+                                    class="caret caret_custom"></b>Sports development platform</a>
                             <ul id="left_menu-dropdown" class="dropdown-menu dropdown_list">
                                 <li><a class="active" href="#">Sports development platform</a></li>
                                 <li><a href="index.html">Sports Stars Inspiration Day</a></li>
